# AI4HEP-agent

./: README.md  pyproject.toml
hackathon/InspireServer/InspireServer/: main.py  main1.py  main3.py  pyproject.toml
hackathon/LatexNew/: jheppub.sty  main -1222-.py  main.py  pyproject.toml
hackathon/selfmodeling/: main.py  main.py.bak  main1.py  pyproject.toml
lucien-agent-export-1756010804748/: config.json
